--- a/css/investigación02.css
+++ b/css/investigación02.css
@@ -18,16 +18,19 @@ header{
 }
 
 a{
-    color: rgb(94, 94, 94);
     text-decoration: none;
     font-size: 2.25em;
+}
+
+a, a:hover{
+    color: white;;
+    text-decoration: none;
 }
 
 ul li{
     display: inline-block;
     padding: 0px 20px;
     margin-bottom: 3%;
-    color: #8b8b8b;
     text-decoration: none;
 }
 
