--- a/css/investigación02.css
+++ b/css/investigación02.css
@@ -53,7 +53,17 @@ ul li:hover{
     margin-top: 35px;
 }
 
-.mas{
+.mas, a{
+    text-decoration: none;
+    color: white;
+}
+
+.Mas, a{
+    text-decoration: none;
+    color: white;
+}
+
+.MAS{
     text-decoration: none;
     color: white;
 }
