--- a/css/investigación02.css
+++ b/css/investigación02.css
@@ -53,17 +53,17 @@ ul li:hover{
     margin-top: 35px;
 }
 
-.mas, a{
+.s{
     text-decoration: none;
     color: white;
 }
 
-.Mas, a{
+.ss{
     text-decoration: none;
     color: white;
 }
 
-.MAS{
+.sss{
     text-decoration: none;
     color: white;
 }
