--- a/css/investigación02.css
+++ b/css/investigación02.css
@@ -17,7 +17,7 @@ header{
     font-weight: bold;
 }
 
-.z, .zz, .zzz, .zzz{
+.z, .zz, .zzz, .zzzz{
     text-decoration: none;
     font-size: 2.25em;
 }
