--- a/css/investigación02.css
+++ b/css/investigación02.css
@@ -72,3 +72,11 @@ ul li:hover{
     color: #50cce6;
     text-transform: uppercase;
 }
+
+.sx{
+    color: black;
+}
+
+.xyz{
+    margin-top: 35px;
+}
