--- a/css/investigación02.css
+++ b/css/investigación02.css
@@ -77,6 +77,11 @@ ul li:hover{
     color: black;
 }
 
-.xyz{
+.xyz, .xd{
     margin-top: 35px;
+}
+
+.gg{
+    height: 300px;
+    width: 625px;
 }
