--- a/css/investigación02.css
+++ b/css/investigación02.css
@@ -110,3 +110,12 @@ img.feautured{
     padding: 10px;
     margin: 0 5px;
 }
+
+.dkl{
+    color: #50cce6;
+}
+
+.cortar{
+    padding: 5px;
+    background-color: #50cce6;
+}
