--- a/css/investigación02.css
+++ b/css/investigación02.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body{
@@ -50,4 +51,39 @@ ul li:hover{
 
 .container{
     color: white;
+}
+
+.footer{
+    background-color: rgb(66, 66, 66);
+    display: flex;
+    color: white;
+    flex-direction: column;
+}
+
+.footer__sections{
+    background-color: rgb(66, 66, 66);
+    padding: 50px 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer__sections-container{
+    display: flex;
+}
+
+.footer__section-table{
+    list-style: none;
+}
+
+.footer__section-title{
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.footer__section-links{
+    margin-bottom: 0.2rem;
+}
+
+a{
+    text-decoration: none;
 }
